--- a/src/app.json
+++ b/src/app.json
@@ -13,32 +13,39 @@
   "tabBar": {
     "color": "#999",
     "backgroundColor": "#fafafa",
-    "selectedColor": "#333",
+    "selectedColor": "#99CCFF",
     "borderStyle": "white",
 
     "list": [{
       "text": "首页",
       "pagePath": "pages/index/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
-    }, {
-      "text": "订单",
-      "pagePath": "pages/logs/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
+      "iconPath": "static/tabs/home-2.png",
+      "selectedIconPath": "static/tabs/home-1.png"
+    },{
+      "text": "消息",
+      "pagePath": "pages/index/main",
+      "iconPath": "static/tabs/bulb(2).png",
+      "selectedIconPath": "static/tabs/bulb(1).png"
+    },{
+      "text": "热门",
+      "pagePath": "pages/index/main",
+      "iconPath": "static/tabs/like.png",
+      "selectedIconPath": "static/tabs/like1.png"
+    },
+    {
+      "text": "我的",
+      "pagePath": "pages/index/main",
+      "iconPath": "static/tabs/user(1).png",
+      "selectedIconPath": "static/tabs/user.png"
     }],
 
-    "items": [{
-      "name": "首页",
-      "pagePath": "pages/index/main",
-      "icon": "static/tabs/home.png",
-      "activeIcon": "static/tabs/home-active.png"
-    }, {
-      "name": "订单",
-      "pagePath": "pages/logs/main",
-      "icon": "static/tabs/orders.png",
-      "activeIcon": "static/tabs/orders-active.png"
-    }],
-    "position": "bottom"
-  }
+ 
+    "position": "bottom",
+    "custom":true
+  },
+
+    "usingComponents": {
+      "van-button": "static/vant/button/index"
+    }
+
 }
