--- a/src/app.json
+++ b/src/app.json
@@ -45,7 +45,12 @@
   },
 
     "usingComponents": {
-      "van-button": "static/vant/button/index"
+      "van-button": "static/vant/button/index",
+
+        "van-tab": "static/vant/tab/index",
+        "van-tabs": "static/vant/tabs/index",
+        "van-search": "static/vant/search/index"
+      
     }
 
 }
