--- a/src/app.json
+++ b/src/app.json
@@ -1,8 +1,10 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/logs/main",
-    "pages/counter/main"
+    "pages/msg/main",
+    "pages/hot/main",
+    "pages/center/main"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -23,18 +25,18 @@
       "selectedIconPath": "static/tabs/home-1.png"
     },{
       "text": "消息",
-      "pagePath": "pages/index/main",
+      "pagePath": "pages/msg/main",
       "iconPath": "static/tabs/bulb(2).png",
       "selectedIconPath": "static/tabs/bulb(1).png"
     },{
       "text": "热门",
-      "pagePath": "pages/index/main",
+      "pagePath": "pages/hot/main",
       "iconPath": "static/tabs/like.png",
       "selectedIconPath": "static/tabs/like1.png"
     },
     {
       "text": "我的",
-      "pagePath": "pages/index/main",
+      "pagePath": "pages/center/main",
       "iconPath": "static/tabs/user(1).png",
       "selectedIconPath": "static/tabs/user.png"
     }],
