--- a/src/app.json
+++ b/src/app.json
@@ -49,7 +49,8 @@
 
     "usingComponents": {
       "van-button": "static/vant/button/index",
-
+      "van-icon": "static/vant/icon/index",
+    
         "van-tab": "static/vant/tab/index",
         "van-tabs": "static/vant/tabs/index",
         "van-search": "static/vant/search/index"
