login auth finish

--- a/src/app.json
+++ b/src/app.json
@@ -54,8 +54,8 @@
     
         "van-tab": "static/vant/tab/index",
         "van-tabs": "static/vant/tabs/index",
-        "van-search": "static/vant/search/index"
-      
+        "van-search": "static/vant/search/index",
+        "van-dialog": "static/vant/dialog/index"
     }
 
 }
