--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "sass-loader": "^7.3.1",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
+    "svg-sprite-loader": "^5.0.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
