--- a/src/app.json
+++ b/src/app.json
@@ -56,7 +56,10 @@
         "van-tab": "static/vant/tab/index",
         "van-tabs": "static/vant/tabs/index",
         "van-search": "static/vant/search/index",
-        "van-dialog": "static/vant/dialog/index"
+        "van-dialog": "static/vant/dialog/index",
+        "van-uploader": "static/vant/uploader/index",
+        "van-picker": "static/vant/picker/index",
+        "van-field": "static/vant/field/index"
     }
 
 }
